--- a/public/index.html
+++ b/public/index.html
@@ -6,8 +6,8 @@
   <link href="./dist/output.css" rel="stylesheet">
 </head>
 <body>
-  <h1 class="text-red-500 text-5xl">
-    Hello wodrld!
+  <h1 class="text-blue-100 text-5xl">
+    Hello woddrld!
   </h1>
 </body>
 </html>
